--- a/index.html
+++ b/index.html
@@ -5,30 +5,33 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BA-title</title>
+    <title>foliac</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/app.css">
+    <link rel="stylesheet" href="style/font.css">
 </head>
 <body>
 
     <header class="ba-header">
 
-        <div class="container">
-            <a href="#" class="ba-logo">Logo</a>
+        <div class="container ba-header__container">
+            <a href="#" class="ba-logo">
+                <img src="img/logo.png" alt="foliac">
+            </a>
 
             <nav>
                 <ul class="menu">
                     <li class="menu__item">
-                        <a href="#" class="menu__link">item 1</a>
+                        <a href="#" class="menu__link">Accuiel</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__link">item 2</a>
+                        <a href="#" class="menu__link">Portfolio</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__link">item 3</a>
+                        <a href="#" class="menu__link">About</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__link">item 4</a>
+                        <a href="#" class="menu__link">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -37,8 +40,82 @@
     </header>
 
     <main>
+        <div class="ba-slider">
+            <section class="hero">
+                <div class="container">
+                    <h1 class="hero-title">voici votre prochain portfolio</h1>
+                    <h2 class="hero-sub-title">un template psd simple et gratui</h2>
+                    <a href="#" class="button">mes travaux</a>
+                </div>
+            </section>
+            <section class="hero">
+                <div class="container">
+                    <h1 class="hero-title" style='color: red;'>voici votre prochain portfolio</h1>
+                    <h2 class="hero-sub-title">un template psd simple et gratui</h2>
+                    <a href="#" class="button">mes travaux</a>
+                </div>
+            </section>
+            <section class="hero">
+                <div class="container">
+                    <h1 class="hero-title" style='color: green;'>voici votre prochain portfolio</h1>
+                    <h2 class="hero-sub-title">un template psd simple et gratui</h2>
+                    <a href="#" class="button">mes travaux</a>
+                </div>
+            </section>
+        </div>
 
+        <ul>
+            <li>
+                <button id='btn-prev'>prev</button>
+            </li>
+            <li>
+                <button id='btn-next'>next</button>
+            </li>
+            <li>
+                <button id='btn-play'>play</button>
+            </li>
+            <li>
+                <button id='btn-pause'>pause</button>
+            </li>
+            <li>
+                <button id='btn-CurrentSlide'> currentSlide</button>
+            </li>
+        </ul>
+
+        <input type='number' id='goToSlide'>
+
+        <section class="ba-portfolio">
+            <div class="container">
+                    <div class="main-navi">
+                        <ul class="portfolio-navi">
+                            <li class="items-navi"><a data-filter=".portfolio-item--red" href="#">Red</a></li>
+                            <li class="items-navi"><a data-filter=".portfolio-item--green" href="#">Green</a></li>
+                            <li class="items-navi"><a data-filter=".portfolio-item--blue" href="#">Blue</a></li>
+                            <li class="items-navi"><a data-filter=".portfolio-item--pink" href="#">Pink</a></li>
+                            <li class="items-navi"><a data-filter=".portfolio-item--yellow" href="#">Yellow</a></li>
+                            <li class="items-navi"><a data-filter=".portfolio-item--purple" href="#">Purple</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="portfolio-examp">
+                            <div class="portfolio-item portfolio-item--red"></div>
+                            <div class="portfolio-item portfolio-item--blue"></div>
+                            <div class="portfolio-item portfolio-item--green"></div>
+                            <div class="portfolio-item portfolio-item--purple"></div>
+                            <div class="portfolio-item portfolio-item--yellow"></div>
+                            <div class="portfolio-item portfolio-item--pink"></div>
+            
+                            <div class="portfolio-item portfolio-item--blue"></div>
+                            <div class="portfolio-item portfolio-item--red"></div>
+                            <div class="portfolio-item portfolio-item--green"></div>
+                            
+                        </div>
+            </div>
+        </section>
     </main>
+
+
+
 
     <footer class="ba-footer">
 
@@ -129,5 +206,11 @@
             </symbol>
         </svg>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+    <!-- <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script> -->
+    <script src='js/slick.min.js'></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
