pampering with a slider and masonry/isotop

--- a/index.html
+++ b/index.html
@@ -63,27 +63,6 @@
                 </div>
             </section>
         </div>
-
-        <ul>
-            <li>
-                <button id='btn-prev'>prev</button>
-            </li>
-            <li>
-                <button id='btn-next'>next</button>
-            </li>
-            <li>
-                <button id='btn-play'>play</button>
-            </li>
-            <li>
-                <button id='btn-pause'>pause</button>
-            </li>
-            <li>
-                <button id='btn-CurrentSlide'> currentSlide</button>
-            </li>
-        </ul>
-
-        <input type='number' id='goToSlide'>
-
         <section class="ba-portfolio">
             <div class="container">
                     <div class="main-navi">
@@ -104,7 +83,7 @@
                             <div class="portfolio-item portfolio-item--purple"></div>
                             <div class="portfolio-item portfolio-item--yellow"></div>
                             <div class="portfolio-item portfolio-item--pink"></div>
-            
+
                             <div class="portfolio-item portfolio-item--blue"></div>
                             <div class="portfolio-item portfolio-item--red"></div>
                             <div class="portfolio-item portfolio-item--green"></div>
@@ -112,6 +91,26 @@
                         </div>
             </div>
         </section>
+
+        <section class='ba-slider-new'>
+            <div class="portfolio-item portfolio-item--red"></div>
+            <div class="portfolio-item portfolio-item--blue"></div>
+            <div class="portfolio-item portfolio-item--green"></div>
+            <div class="portfolio-item portfolio-item--purple"></div>
+            <div class="portfolio-item portfolio-item--yellow"></div>
+            <div class="portfolio-item portfolio-item--pink"></div>
+        </section>
+
+            <ul class="ba-slider-new-nav">
+                <li class="items-navi"><button>Red</button></li>
+                <li class="items-navi"><button>Blue</button></li>
+                <li class="items-navi"><button>Green</button></li>
+                <li class="items-navi"><button>Pink</button></li>
+                <li class="items-navi"><button>Yellow</button></li>
+                <li class="items-navi"><button>Purple</button></li>
+            </ul>
+    
+
     </main>
 
 
