--- a/index.html
+++ b/index.html
@@ -119,9 +119,12 @@
             <section class="section">
                 <div class="container">
                     
-                    <h2>Info about Users</h2>
-                    <button id="getUser">Get info about user</button>
+                    <h2>Info about Products</h2>
+                    <button id="getProducts">Get info about user</button>
+                    
+                    <ul id='products'>
 
+                    </ul>
                 </div>
             </section>
 
